<resources>
    <string name="app_name">Emotions</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_do_not_feel_sad">I do not feel sad</string>
    <string name="i_feel_blue_or_sad">I feel blue or sad</string>
    <string name="i_">I am blue or sad all the time and cant snap out of it</string>
    <string name="i_am_so_sad_or_unhappy_that_it_is_very_painful">I am so sad or unhappy that it is very painful</string>
    <string name="i_am_not_particularly_pessimistic_or_discouraged_about_the_future">I am not particularly pessimistic or discouraged about the future</string>
    <string name="i_feel_discouraged_about_the_future">I feel discouraged about the future</string>
    <string name="i_feel_i_have_nothing_to_look_forward_to">I feel I have nothing to look forward to</string>
    <string name="i_feel_like_i_won_t_ever_get_over_my_troubles">I feel like I won’t ever get over my troubles</string>
    <string name="i_feel_that_the_future_is_hopeless_and_that_things_cannot_improve">I feel that the future is hopeless and that things cannot improve</string>
    <string name="i_do_not_feel_like_a_failure">I do not feel like a failure</string>
    <string name="i_feel_i_have_failed_more_than_the_average_person">I feel I have failed more than the average person</string>
    <string name="i_feel_like_i_have_accomplished_very_little_that_is_worthwhile_or_that_means_nothing">I feel like I have accomplished very little that is worthwhile or that means nothing</string>
    <string name="i_feel_like_i_am_a_complete_failure_as_a_person">I feel like I am a complete failure as a person</string>
    <string name="we9ihtr">I don’t feel particularly guilty</string>
    <string name="i_feel_bad_or_unworthy_a_good_part_of_the_time">I feel bad or unworthy a good part of the time</string>
    <string name="i_feel_quite_guilty">I feel quite guilty</string>
    <string name="i_feel_bad_or_unworthy_particularly_all_the_time_now">I feel bad or unworthy particularly all the time now</string>
    <string name="i_don_t_feel_particularly_guilty">I don’t feel particularly guilty</string>
    <string name="i_don_t_feel_i_am_being_punished">I don’t feel I am being punished</string>
    <string name="i_have_a_feeling_that_something_bad_may_happen_to_me">I have a feeling that something bad may happen to me</string>
    <string name="i_feel_i_am_being_punished_or_will_be_punished">I feel I am being punished or will be punished</string>
    <string name="i_feel_i_deserve_to_be_punished">I feel I deserve to be punished</string>
    <string name="i_don_t_like_myself">I don’t like myself</string>
    <string name="i_am_disgusted_with_myself">I am disgusted with myself</string>
    <string name="i_hate_myself">I hate myself</string>
    <string name="i_don_t_have_any_thoughts_of_harming_myself">I don’t have any thoughts of harming myself</string>
    <string name="i_have_thoughts_of_harming_myself_but_i_would_not_carry_them_out">I have thoughts of harming myself but I would not carry them out</string>
    <string name="i_feel_i_would_be_better_off_dead">I feel I would be better off dead</string>
    <string name="i_have_definite_plans_about_committing_suicide">I have definite plans about committing suicide</string>
    <string name="i_would_kill_myself_if_i_could">I would kill myself if I could</string>
    <string name="i_don_t_cry_any_more_than_usual">I don’t cry any more than usual</string>
    <string name="i_cry_more_now_than_i_used_to">I cry more now than I used to</string>
    <string name="i_cry_all_the_time_now_i_can_t_stop_it">I cry all the time now, I can’t stop it</string>
    <string name="jsdbj">I used to be able to cry but now I can’t cry at all even though I want to</string>
    <string name="i_am_no_more_irritated_now_than_i_ever_am">I am no more irritated now than I ever am</string>
    <string name="i_get_annoyed_or_irritated_now_more_easily_than_i_used_to">I get annoyed or irritated now more easily than I used to</string>
    <string name="i_feel_irritated_all_the_time">I feel irritated all the time</string>
    <string name="i_don_t_get_irritated_at_all_at_the_things_that_used_to_irritate_me">I don’t get irritated at all at the things that used to irritate me</string>
    <string name="i_have_not_lost_interest_in_other_people">I have not lost interest in other people</string>
    <string name="i_am_less_interested_in_other_people_now_than_i_used_to_be">I am less interested in other people now than I used to be</string>
    <string name="i_have_lost_most_of_my_interest_in_other_people_and_have_little_feelings_for_them">I have lost most of my interest in other people and have little feelings for them</string>
    <string name="i_have_lost_all_of_my_interest_in_other_people_and_don_t_care_about_them_at_all">I have lost all of my interest in other people and don’t care about them at all</string>
    <string name="i_make_decisions_about_as_well_as_ever">I make decisions about as well as ever</string>
    <string name="i_am_less_sure_of_myself_now_and_try_to_put_off_making_decisions">I am less sure of myself now and try to put off making decisions</string>
    <string name="i_can_t_make_decisions_anymore_without_help">I can’t make decisions anymore without help</string>
    <string name="i_can_t_make_decisions_at_all_any_more">I can’t make decisions at all any more</string>
    <string name="i_can_work_about_as_well_as_before">I can work about as well as before</string>
    <string name="people_think_depression_is_sadness_crying_or_dressing_in_black_but_people_are_wrong_depression_is_the_constant_feeling_of_being_numb_you_wake_up_in_the_morning_just_to_go_back_to_bed_again">People think depression is sadness, crying or dressing in black. But people are wrong. Depression is the constant feeling of being numb. You wake up in the morning just to go back to bed again.</string>
    <string name="whatisdepression">Depression is extreme sadness or despair that lasts more than days. It interferes with the activities of daily life and can even cause physical pain. Fortunately, depression is highly treatable. Depression, also known as major depressive disorder or clinical depression, is one of the most common mental disorders in the United States.</string>
    <string name="causes_depression">Depression is an extremely complex disease. No one knows exactly what causes it, but it can occur for a variety of reasons. Some people experience depression during a serious medical illness. Others may have depression with life changes such as a move or the death of a loved one. Still others have a family history of depression. Those who do may experience depression and feel overwhelmed with sadness and loneliness for no known reason</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>
