<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFF"
    tools:context="micheal.cob.depressionapp.fragment.QuestionHFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Question H"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"/>

    <!--
    1. I don’t have any thoughts of harming myself
2.I have thoughts of harming myself but I would not carry them out
3. I feel I would be better off dead
4. I have definite plans about committing suicide
5. I would kill myself if I could-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <CheckBox
            android:id="@+id/option_h1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.7"
            android:padding="10dp"
            android:text="@string/i_don_t_have_any_thoughts_of_harming_myself"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <CheckBox
            android:id="@+id/option_h2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.7"
            android:padding="10dp"
            android:text="@string/i_have_thoughts_of_harming_myself_but_i_would_not_carry_them_out"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <CheckBox
            android:id="@+id/option_h3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.7"
            android:padding="10dp"
            android:text="@string/i_feel_i_would_be_better_off_dead"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <CheckBox
            android:id="@+id/option_h4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.7"
            android:padding="10dp"
            android:text="@string/i_have_definite_plans_about_committing_suicide"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <CheckBox
            android:id="@+id/option_h5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.7"
            android:padding="10dp"
            android:text="@string/i_would_kill_myself_if_i_could"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/next_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:background="@drawable/boder"
            android:padding="10dp"
            android:drawableRight="@drawable/ic_arrow"/>
    </RelativeLayout>

</LinearLayout>
