<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFF"
    tools:context="micheal.cob.depressionapp.fragment.QuestionJFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Question J"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"/>
    <!--
        1. I don’t cry any more than usual
2. I cry more now than I used to
3. I cry all the time now, I can’t stop it
4. I used to be able to cry but now I can’t cry at all even though I want to
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <CheckBox
            android:id="@+id/option_j1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.7"
            android:padding="10dp"
            android:text="@string/i_don_t_cry_any_more_than_usual"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <CheckBox
            android:id="@+id/option_j2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.7"
            android:padding="10dp"
            android:text="@string/i_cry_more_now_than_i_used_to"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <CheckBox
            android:id="@+id/option_j3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.7"
            android:padding="10dp"
            android:text="@string/i_cry_all_the_time_now_i_can_t_stop_it"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <CheckBox
            android:id="@+id/option_j4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.7"
            android:padding="10dp"
            android:text="@string/jsdbj"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/next_j"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:background="@drawable/boder"
            android:padding="10dp"
            android:drawableRight="@drawable/ic_arrow"/>
    </RelativeLayout>
</LinearLayout>
